pkg/manifestclienttest/testdata/must-gather-01/namespaces/openshift-authentication/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-12-06T09:34:53Z"
    labels:
      app: oauth-openshift
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: authentication-operator
      operation: Update
      time: "2023-12-06T09:34:53Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2023-12-06T09:34:53Z"
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "27189"
    uid: 0c42cbe2-bda8-47bc-9401-e124687ecc6d
  spec:
    host: oauth-openshift.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
    port:
      targetPort: 6443
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: oauth-openshift
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-12-06T09:34:53Z"
        status: "True"
        type: Admitted
      host: oauth-openshift.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerCanonicalHostname: router-default.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "47595"
